--- a/app/src/main/res/layout/activity_game_details.xml
+++ b/app/src/main/res/layout/activity_game_details.xml
@@ -146,7 +146,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
 
             <TextView
@@ -165,7 +165,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Return to Game List"
-            android:layout_marginTop="380dp"
+            android:layout_marginTop="340dp"
             android:textColor="@android:color/white"/>
 
     </RelativeLayout>
