--- a/app/src/main/res/layout/activity_introduction.xml
+++ b/app/src/main/res/layout/activity_introduction.xml
@@ -1,115 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_ground_with_rook_and_pawn"
-    tools:context=".Introduction">
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@drawable/back_ground_with_rook_and_pawn">
+
+    <TextView
+        android:id="@+id/WelcomeText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Welcome To Chessing"
+        android:textSize="50dp"
+        android:textColor="@android:color/black"
+        android:paddingBottom="16dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/BlackPiecesNameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Black Player:"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:layout_marginEnd="8dp" />
+
+        <EditText
+            android:id="@+id/BlackPiecesNameInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:minHeight="48dp"
+            android:padding="8dp"
+            android:textColor="@android:color/black"
+            android:layout_marginEnd="8dp" />
+
+        <Button
+            android:id="@+id/SetBlackButton"
+            android:layout_width="75dp"
+            android:layout_height="40dp"
+            android:text="Set !"
+            android:textSize="15dp"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/BlackPickedImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@drawable/blackrook"
+        android:src="@drawable/blackrook"
         android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="200dp" />
-
-    <ImageView
-        android:id="@+id/WhitePickedImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/whiterook"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="280dp"
-        android:layout_marginStart="200dp" />
-
-    <TextView
-        android:id="@+id/WelcomeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Welcome To Chessing"
-        android:textSize="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp" />
-
-    <TextView
-        android:id="@+id/BlackPiecesNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Black Player:"
-        android:textSize="20dp"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="200dp" />
-
-    <EditText
-        android:id="@+id/BlackPiecesNameInput"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="200dp" />
-
-    <TextView
-        android:id="@+id/WhitePiecesNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="White Player:"
-        android:gravity="center"
-        android:textSize="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="250dp"
-        android:layout_marginStart="200dp" />
-
-    <EditText
-        android:id="@+id/WhitePiecesNameInput"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="280dp"
-        android:layout_marginStart="200dp" />
-
-    <Button
-        android:id="@+id/SetBlackButton"
-        android:layout_width="75dp"
-        android:layout_height="40dp"
-        android:text="Set !"
-        android:textSize="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="330dp"
-        android:layout_marginEnd="200dp" />
-
-    <Button
-        android:id="@+id/SetWhiteButton"
-        android:layout_width="75dp"
-        android:layout_height="40dp"
-        android:text="Set !"
-        android:textSize="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="330dp"
-        android:layout_marginStart="200dp" />
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp" />
 
     <Button
         android:id="@+id/CancelBlackButton"
@@ -119,11 +68,51 @@
         android:visibility="invisible"
         android:clickable="false"
         android:textSize="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="370dp"
-        android:layout_marginEnd="200dp" />
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/WhitePiecesNameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="White Player:"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:layout_marginEnd="8dp"/>
+
+        <EditText
+            android:id="@+id/WhitePiecesNameInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:minHeight="48dp"
+            android:padding="8dp"
+            android:textColor="@android:color/black"
+            android:layout_marginEnd="8dp"/>
+
+        <Button
+            android:id="@+id/SetWhiteButton"
+            android:layout_width="75dp"
+            android:layout_height="40dp"
+            android:text="Set !"
+            android:textSize="15dp"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/WhitePickedImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/whiterook"
+        android:visibility="invisible"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/CancelWhiteButton"
@@ -133,31 +122,24 @@
         android:visibility="invisible"
         android:clickable="false"
         android:textSize="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="370dp"
-        android:layout_marginStart="200dp" />
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/Start"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Continue !"
         android:textSize="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="420dp"
-        android:layout_marginStart="50dp" />
+        android:textColor="@android:color/white"
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/GoToGameList"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Game List"
         android:textSize="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="30dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textColor="@android:color/white"
+        android:layout_marginTop="8dp"/>
+</LinearLayout>
