--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id = "@+id/relativeLayout"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_bg"
@@ -16,8 +16,6 @@
 
     </FrameLayout>
 
-
-
     <ImageView
         android:id="@+id/grayishCircle"
         android:layout_width="25dp"
@@ -26,68 +24,81 @@
         android:visibility="invisible"
         android:alpha="0.5"/>
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/whitePlayerFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="550dp">
-
-        <ImageView
-            android:id="@+id/BlackChosenPiece"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/blackpawn" />
-
-        <TextView
-            android:id="@+id/BlackPlayerName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:padding="8dp" />
-
-        <TextView
-            android:id="@+id/TimerBlack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:padding="8dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="500dp"
-        >
+        android:background="@drawable/frame_border"
+        android:padding="8dp"> <!-- Adjust padding as needed -->
 
-        <ImageView
-            android:id="@+id/WhiteChosenPiece"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/whitepawn" />
-
-        <TextView
-            android:id="@+id/WhitePlayerName"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:padding="8dp" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/TimerWhite"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/WhiteChosenPiece"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/whitepawn" />
+
+            <TextView
+                android:id="@+id/WhitePlayerName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:padding="8dp" />
+
+            <TextView
+                android:id="@+id/TimerWhite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:padding="8dp" />
+        </LinearLayout>
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/blackPlayerFrame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="550dp"
+        android:background="@drawable/frame_border"
+        android:padding="8dp"> <!-- Adjust padding as needed -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:padding="8dp" />
-    </LinearLayout>
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/BlackChosenPiece"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/blackpawn" />
+
+            <TextView
+                android:id="@+id/BlackPlayerName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:padding="8dp" />
+
+            <TextView
+                android:id="@+id/TimerBlack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:padding="8dp" />
+        </LinearLayout>
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/imageView14"
@@ -207,157 +218,12 @@
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/blackbishop" />
 
-    <TextView
-        android:id="@+id/number1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="2dp"
-        android:text="8" />
-    <TextView
-        android:id="@+id/number2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="130dp"
-        android:layout_marginLeft="2dp"
-        android:text="7" />
-    <TextView
-        android:id="@+id/number3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="180dp"
-        android:layout_marginLeft="2dp"
-        android:text="6" />
-    <TextView
-        android:id="@+id/number4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="230dp"
-        android:layout_marginLeft="2dp"
-        android:text="5" />
-    <TextView
-        android:id="@+id/number5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="280dp"
-        android:layout_marginLeft="2dp"
-        android:text="4" />
-    <TextView
-        android:id="@+id/number6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="330dp"
-        android:layout_marginLeft="2dp"
-        android:text="3" />
-    <TextView
-        android:id="@+id/number7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="380dp"
-        android:layout_marginLeft="2dp"
-        android:text="2" />
-    <TextView
-        android:id="@+id/number8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="430dp"
-        android:layout_marginLeft="2dp"
-        android:text="1" />
-    <TextView
-        android:id="@+id/letterA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="20dp"
-        android:text="A" />
-    <TextView
-        android:id="@+id/letterB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="70dp"
-        android:text="B" />
-    <TextView
-        android:id="@+id/letterC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="120dp"
-        android:text="C" />
-    <TextView
-        android:id="@+id/letterD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="170dp"
-        android:text="D" />
-    <TextView
-        android:id="@+id/letterE"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="220dp"
-        android:text="E" />
-    <TextView
-        android:id="@+id/letterF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="275dp"
-        android:text="F" />
-    <TextView
-        android:id="@+id/letterG"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="320dp"
-        android:text="G" />
-    <TextView
-        android:id="@+id/letterH"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="370dp"
-        android:text="H" />
-
     <ScrollView
         android:layout_width="180dp"
         android:layout_height="150dp"
         android:layout_weight="1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="500dp">
+        android:layout_marginTop="600dp">
 
         <TextView
             android:id="@+id/move_log"
