--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -219,11 +219,11 @@
         app:srcCompat="@drawable/blackbishop" />
 
     <ScrollView
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_weight="1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="600dp">
+        android:layout_marginTop="620dp">
 
         <TextView
             android:id="@+id/move_log"
@@ -231,6 +231,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="18sp"
+            android:textColor="@color/black"
             android:padding="8dp" />
     </ScrollView>
 
